pkg/model/testdata/default-config/networkpolicy-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backstage-psql
spec:
  podSelector:
    matchLabels:
      rhdh.redhat.com/app: ""
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 5432
          protocol: TCP
  egress:
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
        - port: 5353
          protocol: TCP
        - port: 5353
          protocol: UDP
