pkg/model/testdata/default-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  labels:
    default: "true"
spec:
  type: NodePort
  selector:
    backstage.io/app:  # placeholder for 'backstage-<cr-name>'
  ports:
    - name: http
      port: 80
      targetPort: http
